[gd_scene load_steps=14 format=2]

[ext_resource path="res://Recursos/GravityBold8.tres" type="DynamicFont" id=1]
[ext_resource path="res://Recursos/GravityBold8.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Pantalla_inicial.gd" type="Script" id=3]
[ext_resource path="res://Sprites/Fondo.png" type="Texture" id=4]
[ext_resource path="res://Plantas/Cul_cebolla.tscn" type="PackedScene" id=5]
[ext_resource path="res://Musica/Intro theme.wav" type="AudioStream" id=6]
[ext_resource path="res://SFX/Sacar planta.ogg" type="AudioStream" id=7]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.905882, 0.711765, 0.129412, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.823529, 0.451164, 0.0156863, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.905882, 0.87451, 0.129412, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.823529, 0.603922, 0.0156863, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.957031, 0.421972, 0.100937, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.699219, 0.321976, 0.117447, 1 )
anti_aliasing = false

[sub_resource type="DynamicFont" id=10]
size = 64
outline_size = 4
outline_color = Color( 0.00392157, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.952941, 0.760784, 0.423529, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.823529, 0.521569, 0.196078, 0 )
shadow_color = Color( 0, 0, 0, 0 )
anti_aliasing = false

[sub_resource type="Theme" id=11]
default_font = SubResource( 10 )
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_focus = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 10
Button/fonts/font = ExtResource( 1 )
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource( 7 )
Button/styles/normal = SubResource( 8 )
Button/styles/pressed = SubResource( 9 )
Label/fonts/font = SubResource( 10 )
Panel/colors/0a03f2 = Color( 0.301961, 0.929412, 0.784314, 1 )
Panel/styles/panel = SubResource( 6 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 11 )

[node name="Label" type="Label" parent="Panel"]
margin_left = 64.0
margin_top = 64.0
margin_right = 600.0
margin_bottom = 128.0
text = "Agronomia"

[node name="Jugar" type="Button" parent="Panel"]
margin_left = 56.0
margin_top = 184.0
margin_right = 456.0
margin_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 400, 72 )
text = "Jugar"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 300 )
z_index = -1
texture = ExtResource( 4 )

[node name="Cul_cebolla" parent="." instance=ExtResource( 5 )]
position = Vector2( 640, 384 )
scale = Vector2( 10, 10 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -4.0
autoplay = true

[node name="Boton_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="pressed" from="Panel/Jugar" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
